# gavvy-salesmaster

./: .env.example  .env.postgresql  .gitignore  COMMERCIAL_LICENSE.md  DEPLOY.md  DEPLOY_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  PACKAGE_README.md  PRIVACY_POLICY.md  README.md  SAAS_DEPLOY.md  TERMS_OF_SERVICE.md  build_release.py  docker-compose.yml  export_analysis_report.py  install.bat  mkdocs.yml  pyproject.toml  setup.py  setup_postgresql.bat  start.bat  test_all_modules.py  test_data_mining.py  verify_db.py  配置指南.md
.github/workflows/: ci.yml
brain/: leads.md
docs/: ANALYTICS.md  CALLS.md  EXPORT.md  KNOWLEDGE_BASE.md  QUOTES_AND_CONTRACTS.md  RBAC.md  SaaS_GUIDE.md  TASKS_AND_APPROVALS.md  api.md  architecture-design.md  cli.md  deploy.md  development-plan.md  enterprise.md  evolve.md  global-qa-report.md  index.md  module-merge-memory-abilities.md  modules.md  privacy-policy.md  product-copy.md  quickstart.md  sales-agent-team-v2-requirement.md  terms-of-service.md  third-party-risk.md  website-copywriting.md  website-full.html  website-prototype-apple.html  website-prototype.html  落地计划.md
examples/: knowledge_example.py
nginx/conf.d/: gavvy.conf
pages/: _redirects  index.html
sales-output/: proposal_AutoGPT.md  proposal_CrewAI.md  proposal_Hugging_Face.md  proposal_LangChain.md  research_AutoGPT.md  research_CrewAI.md  research_Hugging_Face.md  research_LangChain.md
scripts/: backup_data.py  deploy.sh  export_analysis_report.py  gavvy-auto-hunt.py  seed_real_data.py  setup_postgresql.py
src/: SentriKit_salesmaster
src/data/: tianlong_sales.db
src/gavvy_salesmaster/: __init__.py
src/gavvy_salesmaster/channels_pkg/: __init__.py
src/gavvy_salesmaster/channels_pkg/channels/: __init__.py  base.py  dingtalk.py  dispatcher.py  email.py  feishu.py  wework.py
src/gavvy_salesmaster/core/: __init__.exports.py  __init__.py  api.py  app.py  cache.py  enterprise_client.py  evolver.py  llm_engine.py  search.py  templates.py  tianlong_client.py  value.py
src/gavvy_salesmaster/core/routers/: __init__.py  auth.py  channels.py  crm.py  knowledge.py  payment.py  rbac.py  scripts.py
src/gavvy_salesmaster/core/storage/: __init__.py  compliance.py  database.py  db.py  db_mysql.py  db_sqlite.py  migration.py  pgrepo.py  repository.py  stats.py
src/gavvy_salesmaster/core/web/: _customers.json  dashboard_v2.html  dashboard_v2.js  import_dialog.js  index.html  (+6 more)
src/gavvy_salesmaster/crm_pkg/: __init__.py
src/gavvy_salesmaster/team_pkg/: __init__.c  __init__.py
src/gavvy_salesmaster/trade_pkg/: __init__.py
src/tianlong_salesmaster/: __init__.py
src/tianlong_salesmaster/channels_pkg/: __init__.py
src/tianlong_salesmaster/core/: __init__.py  api.py  app.py  cache.py  enterprise_client.py  evolver.py  language.py  llm_engine.py  master.py  multithread.py  psychology.py  risk.py  templates.py  tianlong_client.py  value.py
src/tianlong_salesmaster/crm_pkg/: __init__.py
src/tianlong_salesmaster/team_pkg/: __init__.py
src/tianlong_salesmaster/trade_pkg/: __init__.py
tests/: test_analytics.py  test_calls.py  test_channels.py  test_compliance.py  test_crm.py  test_database.py  test_esign.py  test_export.py  test_fastapi_integration.py  test_integration.py  test_knowledge.py  test_llm_fallback.py  test_payment_esign_real.py  test_quotes.py  test_rbac.py  test_rbac_audit.py  test_saas.py  test_saas_integration.py  test_scripts.py  test_storage.py  test_tasks.py  test_team_agents.py  test_web_frontend.py  test_wework.py  test_workflow.py
tests/quality/: _real_outputs.json  test_benchmark.py  test_llm_judge.py  test_rules.py
tests/quality/benchmarks/: scenarios.json
website/: DEPLOY.md  index.html
website/static/css/: style.css
website/static/js/: main.js
(+194 files in other folders)
