[build-system]
requires = ["setuptools>=64", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gavvy-salesmaster"
version = "3.0.0"
description = "开源销售引擎 — CRM + AI销售团队 + 自动化Pipeline，pip install 即用"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["sales", "crm", "pipeline", "lead-generation", "proposal", "ai-agent"]

authors = [
    {name = "Gavvy Team", email = "oss@gavvy.dev"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["fastapi>=0.100", "uvicorn>=0.20"]

[project.optional-dependencies]
gavvy = ["sentrikit-toolkit"]
database = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
enterprise = ["httpx>=0.27.0"]  # 企业版通过服务端 API 提供，本地仅需 HTTP 客户端
all = ["sentrikit-toolkit", "sqlalchemy>=2.0", "psycopg2-binary>=2.9"]

[project.scripts]
gavvy-sales-api = "gavvy_salesmaster.core.api:main"
gavvy-sales-fastapi = "gavvy_salesmaster.core.app:main"

[project.urls]
Homepage = "https://github.com/macor24/gavvy-salesmaster"
Documentation = "https://github.com/macor24/gavvy-salesmaster"
Source = "https://github.com/macor24/gavvy-salesmaster"
"Issue Tracker" = "https://github.com/macor24/gavvy-salesmaster/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gavvy_salesmaster*"]

[tool.setuptools.package-data]
"gavvy_salesmaster" = ["web/*.html", "web/*.js", "web/*.css", "web/_customers.json", "web/_messages/*.json"]
